# Gripper-TEST

./: README.md
loadcell_idc/: CMakeLists.txt  package.xml  setup.py
loadcell_idc/msg/: LoadCellState.msg
loadcell_idc/nodes/: loadcell_idc_node
powerxel_module/: CMakeLists.txt  package.xml
powerxel_module/include/powerxel_module/: powerxel_module.h
powerxel_module/src/: powerxel_module.cpp
test_gripper_gui/: CMakeLists.txt  package.xml
test_gripper_gui/config/: parameter.yaml
test_gripper_gui/include/test_gripper_gui/: q_ros_node.h  test_gripper_main_window.h
test_gripper_gui/launch/: gui.launch
test_gripper_gui/src/: main.cpp  q_ros_node.cpp  test_gripper_main_window.cpp
test_gripper_gui/ui/: test_gripper_main_window.ui
test_gripper_manager/: CMakeLists.txt  package.xml
test_gripper_manager/config/: Gripper_1.robot  Gripper_2.robot  Gripper_3.robot  TEST-GRIPPER.robot  TEST-POWERXEL.robot  dxl_init.yaml  dxl_init_powerxel_test.yaml
test_gripper_manager/include/test_gripper_manager/: test_manager.h
test_gripper_manager/launch/: gripper_manager.launch  test.launch  test_gripper_manager.launch  test_powerxel_manager.launch
test_gripper_manager/src/: test_gripper_manager.cpp  test_manager.cpp  test_powerxel_manager.cpp
test_gripper_module/: CMakeLists.txt  package.xml
test_gripper_module/include/test_gripper_module/: joint_status.h  test_gripper_module.h
test_gripper_module/src/: joint_status.cpp  test_gripper_module.cpp
test_master_gui/: CMakeLists.txt  package.xml
test_master_gui/include/test_master_gui/: q_ros_node.h  test_master_main_window.h
test_master_gui/launch/: master_gui.launch
test_master_gui/src/: main.cpp  q_ros_node.cpp  test_master_main_window.cpp
test_master_gui/ui/: test_master_main_window.ui
