<?xml version="1.0"?>
<package format="2">
  <name>powerxel_module</name>
  <version>0.0.1</version>
  <description>
    The powerxel_module package
  </description>
  <license>Apache 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="kmjung@robotis.com">Pyo</maintainer>
  <buildtool_depend>catkin</buildtool_depend>  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>robotis_framework_common</depend>
  <depend>dynamixel_sdk</depend>
  <depend>robotis_device</depend>
  <depend>boost</depend>
</package>
