<?xml version="1.0"?>
<package format="2">
  <name>test_gripper_gui</name>
  <version>0.1.0</version>
  <description>The test_gripper_gui package</description>

  <license>Apache 2.0</license>

  <maintainer email="kmjung@robotis.com">kayman</maintainer>
  <author email="kmjung@robotis.com">kayman</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>qt_gui</depend>
  <depend>qt_gui_cpp</depend>
  <depend>std_msgs</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>loadcell_idc</depend>
</package>
