<?xml version="1.0"?>
<package format="2">
  <name>test_gripper_module</name>
  <version>0.0.1</version>
  <description>
    test_gripper_module
  </description>
  <license>Apache 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="kmjung@robotis.com">Kayman</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>robotis_framework_common</depend>
  <depend>robotis_device</depend>
  <depend>robotis_math</depend>
<!--  <depend>boost</depend>-->
  <depend>eigen</depend>
  <depend>yaml-cpp</depend>
</package>
